{
  "version": 4,
  "terraform_version": "1.6.0",
  "serial": 436,
  "lineage": "bfd7a4c5-91e3-f350-2100-bb36faac0019",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d5343c29547c57a7",
            "association_id": "eipassoc-008bf054ccfa3cb78",
            "domain": "vpc",
            "id": "eipalloc-0d5343c29547c57a7",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0e6f2eaae9d61af8a",
            "private_dns": "ip-10-10-0-16.ap-southeast-1.compute.internal",
            "private_ip": "10.10.0.16",
            "public_dns": "ec2-18-139-175-81.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.139.175.81",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip1"
            },
            "tags_all": {
              "Name": "eip1"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02c70f7d7da3b0317",
            "association_id": "eipassoc-08a9fa6957bc78529",
            "domain": "vpc",
            "id": "eipalloc-02c70f7d7da3b0317",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0598e769e6507906b",
            "private_dns": "ip-10-10-1-240.ap-southeast-1.compute.internal",
            "private_ip": "10.10.1.240",
            "public_dns": "ec2-13-250-216-28.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.250.216.28",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip2"
            },
            "tags_all": {
              "Name": "eip2"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08db74f389216e7e0",
            "arn": "arn:aws:ec2:ap-southeast-1:686100836854:instance/i-01b0eacc260bca605",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ssmands3role",
            "id": "i-01b0eacc260bca605",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01a46fe990a6351bc",
            "private_dns": "ip-10-10-10-78.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.10.78",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-038ea301d33e908d3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-079d09972bbd755ee",
            "tags": {
              "Name": "app_instance"
            },
            "tags_all": {
              "Name": "app_instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fa1381a7a35266e2"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2ssmrole_dev",
            "aws_security_group.app_sg",
            "aws_security_group.external_alb_sg",
            "aws_security_group.internal_alb_sg",
            "aws_security_group.web_sg",
            "aws_subnet.App_Private_A",
            "aws_vpc.main",
            "data.http.ipinfo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08db74f389216e7e0",
            "arn": "arn:aws:ec2:ap-southeast-1:686100836854:instance/i-0de611234c056fd76",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ssmands3role",
            "id": "i-0de611234c056fd76",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ae6115a88b9db596",
            "private_dns": "ip-10-10-0-39.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.0.39",
            "public_dns": "ec2-3-1-84-30.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "3.1.84.30",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0144a4d09fa50728d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-019e419694d4b3ed1",
            "tags": {
              "Name": "web_instance"
            },
            "tags_all": {
              "Name": "web_instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-004c96381d592adc6"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2ssmrole_dev",
            "aws_security_group.external_alb_sg",
            "aws_security_group.web_sg",
            "aws_subnet.web_public_1",
            "aws_vpc.main",
            "data.http.ipinfo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:686100836854:internet-gateway/igw-0227064264b2e64f7",
            "id": "igw-0227064264b2e64f7",
            "owner_id": "686100836854",
            "tags": {
              "Name": "DevEngine_IGW"
            },
            "tags_all": {
              "Name": "DevEngine_IGW"
            },
            "vpc_id": "vpc-000268800b2d608ae"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d5343c29547c57a7",
            "association_id": "eipassoc-008bf054ccfa3cb78",
            "connectivity_type": "public",
            "id": "nat-0cd080ef628c08fcc",
            "network_interface_id": "eni-0e6f2eaae9d61af8a",
            "private_ip": "10.10.0.16",
            "public_ip": "18.139.175.81",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-019e419694d4b3ed1",
            "tags": {
              "Name": "NGW1"
            },
            "tags_all": {
              "Name": "NGW1"
            }
          },
          "dependencies": [
            "aws_eip.nat1",
            "aws_subnet.web_public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02c70f7d7da3b0317",
            "association_id": "eipassoc-08a9fa6957bc78529",
            "connectivity_type": "public",
            "id": "nat-0161646c6f230378d",
            "network_interface_id": "eni-0598e769e6507906b",
            "private_ip": "10.10.1.240",
            "public_ip": "13.250.216.28",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0eafee736caa7e314",
            "tags": {
              "Name": "NGW2"
            },
            "tags_all": {
              "Name": "NGW2"
            }
          },
          "dependencies": [
            "aws_eip.nat2",
            "aws_subnet.Web_public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_APP_RT_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:686100836854:route-table/rtb-097e3b2718fb94f32",
            "id": "rtb-097e3b2718fb94f32",
            "owner_id": "686100836854",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0cd080ef628c08fcc",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PrvtApp_devEngine_1"
            },
            "tags_all": {
              "Name": "PrvtApp_devEngine_1"
            },
            "timeouts": null,
            "vpc_id": "vpc-000268800b2d608ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat1",
            "aws_nat_gateway.gw1",
            "aws_subnet.web_public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_APP_RT_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:686100836854:route-table/rtb-028ce76aed7cf1e17",
            "id": "rtb-028ce76aed7cf1e17",
            "owner_id": "686100836854",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0161646c6f230378d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PrvtApp_devEngine_2"
            },
            "tags_all": {
              "Name": "PrvtApp_devEngine_2"
            },
            "timeouts": null,
            "vpc_id": "vpc-000268800b2d608ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat2",
            "aws_nat_gateway.gw2",
            "aws_subnet.Web_public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publicWeb_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:686100836854:route-table/rtb-04014d54036aaa1e9",
            "id": "rtb-04014d54036aaa1e9",
            "owner_id": "686100836854",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0227064264b2e64f7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PublicRoute_devEngine"
            },
            "tags_all": {
              "Name": "PublicRoute_devEngine"
            },
            "timeouts": null,
            "vpc_id": "vpc-000268800b2d608ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_App_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-023b72db6dd6da168",
            "route_table_id": "rtb-097e3b2718fb94f32",
            "subnet_id": "subnet-079d09972bbd755ee"
          },
          "dependencies": [
            "aws_eip.nat1",
            "aws_nat_gateway.gw1",
            "aws_route_table.private_APP_RT_1",
            "aws_subnet.App_Private_A",
            "aws_subnet.web_public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_App_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-098e2a4e6b2290f9c",
            "route_table_id": "rtb-028ce76aed7cf1e17",
            "subnet_id": "subnet-0c485ee334556b6c0"
          },
          "dependencies": [
            "aws_eip.nat2",
            "aws_nat_gateway.gw2",
            "aws_route_table.private_APP_RT_2",
            "aws_subnet.App_Private_C",
            "aws_subnet.Web_public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e88b40ec47ed9c8",
            "route_table_id": "rtb-04014d54036aaa1e9",
            "subnet_id": "subnet-019e419694d4b3ed1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.publicWeb_RT",
            "aws_subnet.web_public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_C",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0167fd5edf1c43f82",
            "route_table_id": "rtb-04014d54036aaa1e9",
            "subnet_id": "subnet-0eafee736caa7e314"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.publicWeb_RT",
            "aws_subnet.Web_public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:686100836854:security-group/sg-0fa1381a7a35266e2",
            "description": "App EC2 SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fa1381a7a35266e2",
            "ingress": [
              {
                "cidr_blocks": [
                  "49.47.198.216/32"
                ],
                "description": "",
                "from_port": 4000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4000
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 4000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01cf93d0d3360494d"
                ],
                "self": false,
                "to_port": 4000
              }
            ],
            "name": "app_sg",
            "name_prefix": "",
            "owner_id": "686100836854",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-000268800b2d608ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.external_alb_sg",
            "aws_security_group.internal_alb_sg",
            "aws_security_group.web_sg",
            "aws_vpc.main",
            "data.http.ipinfo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:686100836854:security-group/sg-04e05ecdfda3d2c7a",
            "description": "DB SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04e05ecdfda3d2c7a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fa1381a7a35266e2"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "db_sg",
            "name_prefix": "",
            "owner_id": "686100836854",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-000268800b2d608ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.app_sg",
            "aws_security_group.external_alb_sg",
            "aws_security_group.internal_alb_sg",
            "aws_security_group.web_sg",
            "aws_vpc.main",
            "data.http.ipinfo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "external_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:686100836854:security-group/sg-0002ce53c1ecec35a",
            "description": "External Application LB SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0002ce53c1ecec35a",
            "ingress": [
              {
                "cidr_blocks": [
                  "109.129.123.2/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "External_ALB_SG",
            "name_prefix": "",
            "owner_id": "686100836854",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-000268800b2d608ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "internal_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:686100836854:security-group/sg-01cf93d0d3360494d",
            "description": "Internal ALB SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01cf93d0d3360494d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-004c96381d592adc6"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "internal_alb_sg",
            "name_prefix": "",
            "owner_id": "686100836854",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-000268800b2d608ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.external_alb_sg",
            "aws_security_group.web_sg",
            "aws_vpc.main",
            "data.http.ipinfo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:686100836854:security-group/sg-004c96381d592adc6",
            "description": "Web EC2 SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-004c96381d592adc6",
            "ingress": [
              {
                "cidr_blocks": [
                  "49.47.198.216/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0002ce53c1ecec35a"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web_sg",
            "name_prefix": "",
            "owner_id": "686100836854",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-000268800b2d608ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.external_alb_sg",
            "aws_vpc.main",
            "data.http.ipinfo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "App_Private_A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:686100836854:subnet/subnet-079d09972bbd755ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.10.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-079d09972bbd755ee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "686100836854",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "App_Prvt_A"
            },
            "tags_all": {
              "Name": "App_Prvt_A"
            },
            "vpc_id": "vpc-000268800b2d608ae"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "App_Private_C",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:686100836854:subnet/subnet-0c485ee334556b6c0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.10.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c485ee334556b6c0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "686100836854",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "App_Prvt_C"
            },
            "tags_all": {
              "Name": "App_Prvt_C"
            },
            "vpc_id": "vpc-000268800b2d608ae"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "DB_Prvt_A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:686100836854:subnet/subnet-06b027a4689bd02af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.10.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06b027a4689bd02af",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "686100836854",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DB_Prvt_A"
            },
            "tags_all": {
              "Name": "DB_Prvt_A"
            },
            "vpc_id": "vpc-000268800b2d608ae"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "DB_Prvt_C",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:686100836854:subnet/subnet-094adc353a401652d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.10.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-094adc353a401652d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "686100836854",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DB_Prvt_C"
            },
            "tags_all": {
              "Name": "DB_Prvt_C"
            },
            "vpc_id": "vpc-000268800b2d608ae"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Web_public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:686100836854:subnet/subnet-0eafee736caa7e314",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eafee736caa7e314",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "686100836854",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Web_Pub_C"
            },
            "tags_all": {
              "Name": "Web_Pub_C"
            },
            "vpc_id": "vpc-000268800b2d608ae"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web_public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:686100836854:subnet/subnet-019e419694d4b3ed1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-019e419694d4b3ed1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "686100836854",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Web_Pub_A"
            },
            "tags_all": {
              "Name": "Web_Pub_A"
            },
            "vpc_id": "vpc-000268800b2d608ae"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:686100836854:vpc/vpc-000268800b2d608ae",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-08958c91fd00fbeb7",
            "default_route_table_id": "rtb-073a6d137683db706",
            "default_security_group_id": "sg-0b8638d7511d1c446",
            "dhcp_options_id": "dopt-0389df7acd09c8ed8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-000268800b2d608ae",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-073a6d137683db706",
            "owner_id": "686100836854",
            "tags": {
              "Name": "DevEngine_Vpc01"
            },
            "tags_all": {
              "Name": "DevEngine_Vpc01"
            }
          }
        }
      ]
    }
  ]
}